@@ -81,7 +81,9 @@ Version 1.5.0 -- CVS
   - Encoding of Russian translation changed to utf-8. Lithuanian translation changed
     to iso-8859-4. Fix allows to use national letters in folder names correctly.
   - Added "Bypass Trash" checkbox to folder index, used with the Delete
-    button. (tassium)
+    button. (update: This needs work and will be changed, possibly removed)
+  - Fixed a problem with delete_move_next and server thread-sorting.
+  - New hook function: boolean_hook_function()  Used for true/false hooks.
 
 **************************************
 *** SquirrelMail Stable Series 1.4 ***
